-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.2.5
-
None
-
58265ef60 (dev), 4922d0bb2 (6.10)
Control { id: root property alias model: list.model readonly property int modelRowCount: model.rowCount onModelRowCountChanged:{ console.log("Model row count changed"); console.info(category, "Model row count changed"); } LoggingCategory { id: category name: "logging.category" defaultLogLevel: LoggingCategory.Info Component.onCompleted: console.log("Logging category completed"); } contentItem: ListView { id: list ... } }
In the above code, the `onModelRowCountChanged` handler is called before the LoggingCategory object has completed (proven by the console.log statements in both).
This results in the following errors:
Error: A QmlLoggingCatgory was provided without a valid name