src/qml/qml/qqmlloggingcategorybase_p.h
@@ -32,11 +32,16 @@ class Q_QML_EXPORT QQmlLoggingCategoryBase : public QObject
 public:
     QQmlLoggingCategoryBase(QObject *parent = nullptr) : QObject(parent) {}
 
-    const QLoggingCategory *category() const { return m_category.get(); }
+    const QLoggingCategory *category() {
+        forceCompletion();
+        return m_category.get();
+    }
     void setCategory(const char *name, QtMsgType type)
     {
         m_category = std::make_unique<QLoggingCategory>(name, type);
     }
+
+    virtual void forceCompletion() = 0;
 
 private:
     std::unique_ptr<QLoggingCategory> m_category;
